refactor and simplify naming

--- a/notebooks/neo4j.ipynb
+++ b/notebooks/neo4j.ipynb
@@ -13,8 +13,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-30T06:02:08.371402Z",
-     "start_time": "2024-11-30T06:02:08.272858Z"
+     "end_time": "2025-01-09T15:32:17.346064Z",
+     "start_time": "2025-01-09T15:32:17.257746Z"
     }
    },
    "source": [
@@ -39,15 +39,15 @@
     {
      "data": {
       "text/plain": [
-       "{nodes=[node<-357>, node<-353>, node<-354>, node<-361>, node<-360>, node<-359>, node<-355>, node<-356>, node<-358>, node<-362>, node<-363>], relationships=[relationship<-521>, relationship<-519>, relationship<-524>, relationship<-523>, relationship<-526>, relationship<-528>, relationship<-527>, relationship<-522>, relationship<-525>, relationship<-532>, relationship<-533>, relationship<-517>, relationship<-529>, relationship<-534>, relationship<-535>, relationship<-520>, relationship<-518>, relationship<-530>, relationship<-531>]}"
+       "{nodes=[node<-104>, node<-100>, node<-101>, node<-108>, node<-107>, node<-106>, node<-102>, node<-103>, node<-105>, node<-109>, node<-110>], relationships=[relationship<-104>, relationship<-102>, relationship<-106>, relationship<-107>, relationship<-111>, relationship<-110>, relationship<-109>, relationship<-105>, relationship<-108>, relationship<-115>, relationship<-116>, relationship<-100>, relationship<-112>, relationship<-117>, relationship<-118>, relationship<-103>, relationship<-101>, relationship<-113>, relationship<-114>]}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -60,8 +60,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-22T15:35:03.573903Z",
-     "start_time": "2024-11-22T15:35:03.414378Z"
+     "end_time": "2025-01-09T15:30:12.177503Z",
+     "start_time": "2025-01-09T15:30:12.104400Z"
     }
    },
    "cell_type": "code",
@@ -330,12 +330,12 @@
        "[]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -348,8 +348,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-30T06:06:15.980588Z",
-     "start_time": "2024-11-30T06:06:15.813770Z"
+     "end_time": "2025-01-09T15:30:16.665947Z",
+     "start_time": "2025-01-09T15:30:16.463288Z"
     }
    },
    "cell_type": "code",
@@ -424,12 +424,12 @@
        "User({userId=USER123}->MADE_DEPOSIT({}->CCDeposit({symbol=BTC}->INVOLVES_ASSET({}->Asset({name=Bitcoin, symbol=BTC, type=Cryptocurrency, assetId=BTC001, decimals=8}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 5
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -442,24 +442,11 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-22T15:28:49.832245Z",
-     "start_time": "2024-11-22T15:28:49.731203Z"
+     "end_time": "2025-01-09T15:29:51.383205Z",
+     "start_time": "2025-01-09T15:29:51.264025Z"
     }
    },
    "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "null"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 3,
    "source": [
     "import org.springframework.data.neo4j.core.awaitOneOrNull\n",
     "\n",
@@ -470,7 +457,20 @@
     "runBlocking {\n",
     "    client.query(deleteQuery).fetch().awaitOneOrNull()\n",
     "}\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "null"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 6
   }
  ],
  "metadata": {
@@ -487,6 +487,9 @@
    "pygments_lexer": "kotlin",
    "codemirror_mode": "text/x-kotlin",
    "nbconvert_exporter": ""
+  },
+  "ktnbPluginMetadata": {
+   "sessionRunMode": "IDE_PROCESS"
   }
  },
  "nbformat": 4,
